# tllm

./: .gitignore  LICENSE  README.md  model.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: eval_model.py  export_gguf.py  export_hf.py  fetch_wiki.py  generate.py  make_tinystories.py  make_wiki.py  make_wiki_2mb.py  make_wiki_5mb.py  train_model.py  train_tokenizer.py
tests/: test_generate.py  test_model.py
tllm/: __init__.py  model.py
