[project]
name = "tllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["tllm*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
